# holo-bot

./: .gitattributes  .gitignore  Cargo.toml  README.md  database.db  deploy.sh  holo_bot.db  start.sh
.cargo/: config  config.toml
.github/: FUNDING.yml
Libraries/sqlite3/lib/: libsqlite3.la
Libraries/sqlite3/lib/pkgconfig/: sqlite3.pc
apis/: Cargo.toml
apis/src/: birthday_reminder.rs  discord_api.rs  holo_api.rs  lib.rs  meme_api.rs  translation_api.rs  twitter_api.rs
bot/: Cargo.toml
bot/src/: discord_bot.rs  lib.rs
commands/: Cargo.toml
commands/src/: birthdays.rs  chatbot.rs  claim.rs  command.rs  config.rs  eightball.rs  emoji_usage.rs  interactions.rs  lib.rs  live.rs  meme.rs  ogey.rs  pekofy.rs  prelude.rs  unclaim.rs  upcoming.rs  util.rs
crates/apis/: Cargo.toml
crates/apis/deepl/: Cargo.toml
crates/apis/deepl/src/: lib.rs  serde_impls.rs
crates/apis/livetl/: Cargo.toml
crates/apis/livetl/src/: client.rs  errors.rs  lib.rs  types.rs  util.rs
crates/apis/mchad/: Cargo.toml
crates/apis/mchad/src/: client.rs  errors.rs  lib.rs  listener.rs  types.rs  util.rs
crates/apis/src/: birthday_reminder.rs  discord_api.rs  holo_api.rs  lib.rs  livetl_api.rs  mchad_api.rs  meme_api.rs  openai_api.rs  reminder_notifier.rs  translation_api.rs  twitter_api.rs
crates/apis/src/types/: holo_api.rs  livetl.rs  mchad_api.rs  mod.rs  twitter_api.rs
crates/apis/twitter/: Cargo.toml
crates/apis/twitter/src/: builders.rs  client.rs  errors.rs  lib.rs  macros.rs  types.rs  util.rs
crates/apis/twitter/src/streams/: filtered_stream.rs  mod.rs  sampled_stream.rs  twitter_stream.rs
crates/apis/twitter/src/types/: id.rs
crates/bot/: Cargo.toml
crates/bot/src/: commands.rs  discord_bot.rs  emoji_tracking.rs  lib.rs  paginated_list.rs  resource_tracking.rs  temp_mute_react.rs
crates/bot/src/commands/: birthdays.rs  config.rs  donate.rs  eightball.rs  emoji_usage.rs  help.rs  live.rs  meme.rs  move_conversation.rs  music.rs  ogey.rs  pekofy.rs  prelude.rs  sticker_usage.rs  timestamp.rs  tsfmt.rs  upcoming.rs  uwuify.rs
crates/bot/src/commands/unused/: chatbot.rs  claim.rs  watching.rs
crates/commands/: Cargo.toml
crates/commands/benches/: pekofy_benchmark.rs
crates/commands/src/: birthdays.rs  claim.rs  config.rs  donate.rs  eightball.rs  emoji_usage.rs  interactions.rs  lib.rs  live.rs  meme.rs  music.rs  ogey.rs  pekofy.rs  prelude.rs  quote.rs  remind_me.rs  reminder.rs  sticker_usage.rs  timestamp.rs  tsfmt.rs  unclaim.rs  upcoming.rs  util.rs  watching.rs
crates/commands/src/unused/: chatbot.rs  claim.rs
crates/commands/src/util/: functions.rs
crates/holo-bot-macros/: Cargo.toml
crates/holo-bot-macros/src/: consts.rs  lib.rs  macros.rs  structures.rs  util.rs
crates/holo-bot-macros/src/structures/: check.rs  command_fun.rs  interaction_field.rs  interaction_opt.rs  interaction_restriction.rs  interaction_setup.rs  match_sub_commands.rs  mod.rs  parse_interaction_options.rs  prelude.rs  rate_limit.rs
crates/lib/: Cargo.toml
crates/lib/src/: lib.rs
crates/macros/: Cargo.toml
crates/macros/src/: lib.rs  util.rs
crates/macros/src/structures/: checks.rs  cloned_variables_block.rs  group_struct.rs  interaction_options.rs  interaction_restriction.rs  interaction_setup.rs  mod.rs  parse_interaction_options.rs  permissions.rs
crates/main/: Cargo.toml
crates/main/src/: logger.rs  main.rs
crates/music-queue/: Cargo.toml
crates/music-queue/src/: errors.rs  event_handlers.rs  events.rs  lib.rs  macros.rs  metadata.rs  parameter_types.rs  prelude.rs  queue.rs  wrapper.rs
crates/utility/: Cargo.toml
crates/utility/src/: config.rs  extensions.rs  functions.rs  lib.rs  logger.rs  macros.rs  serializers.rs  types.rs
crates/utility/src/config/: functions.rs  types.rs
crates/utility/src/discord/: interactions.rs  mod.rs  music.rs  paginated_list.rs  segmented_message.rs  traits.rs  types.rs
crates/utility/src/discord/music/: buffered_queue.rs  event_handlers.rs  events.rs  macros.rs  metadata.rs  parameter_types.rs  prelude.rs  queue_events.rs  wrapper.rs
crates/utility/src/streams/: types.rs
holo-bot-macros/: Cargo.toml
holo-bot-macros/src/: attributes.rs  consts.rs  lib.rs  structures.rs  util.rs
lib/: Cargo.toml
lib/src/: lib.rs
main/: Cargo.toml
main/src/: main.rs
queries/: get_scheduled_lives.graphql  schema.json
scripts/: build.sh  deploy.sh  sync-config.sh
settings/: development.db  production.db  talents.toml
settings/development/: database.db  holobot.db  talents.toml
settings/schemas/: holobot-config-schema.json  holobot-talents-schema.json
src/: birthday_reminder.rs  config.rs  discord_api.rs  discord_bot.rs  holo_api.rs  latex_renderer.rs  lib.rs  main.rs  serializers.rs  translation_api.rs  twitter_api.rs
src/apis/: discord_api.rs  holo_api.rs  meme_api.rs  translation_api.rs  twitter_api.rs
src/commands/: claim.rs  eightball.rs  help.rs  live.rs  meme.rs  mod.rs  ogey.rs  pekofy.rs  slash_types.rs  unclaim.rs  upcoming.rs  util.rs
src/utility/: logger.rs  macros.rs  serializers.rs
utility/src/: config.rs  extensions.rs  lib.rs  logger.rs  macros.rs
