[workspace]
members = [
    "crates/*",
    "crates/apis/deepl",
    # "crates/apis/mchad",
    "crates/apis/livetl",
    "crates/apis/twitter",
]

[profile.dev]
debug = 2
lto = "thin"
incremental = true

[profile.dev.package.backtrace]
opt-level = 3

[patch.crates-io]
ytextract = { path = "../ytextract" }
audiopus_sys = { path = "../audiopus_sys" }


[patch."https://github.com/serenity-rs/serenity"]
serenity = { version = "0.11.2" }
