[workspace]
members = [
    "crates/*",
    "crates/apis/deepl",
    # "crates/apis/mchad",
    "crates/apis/livetl",
    "crates/apis/twitter",
]

[profile.dev]
debug = 2
incremental = true

[profile.release]
debug = 1
lto = "thin"
incremental = true

[profile.dev.package.backtrace]
opt-level = 3

[patch.crates-io]


[patch."https://github.com/serenity-rs/serenity"]
serenity = { version = "0.11.2" }
# ytextract = { path = "../ytextract" }
# audiopus_sys = { path = "../audiopus_sys" }
