[workspace]
members = [
    "crates/bot",
    "crates/macros",
    "crates/main",
    "crates/utility",
    "crates/apis/deepl",
    # "crates/apis/mchad",
    "crates/apis/livetl",
    "crates/apis/twitter",
]

[profile.dev]
debug = 2
incremental = true

[profile.release]
debug = 1
lto = "thin"
incremental = true

[profile.dev.package.backtrace]
opt-level = 3

[patch.crates-io]
# ytextract = { path = "../ytextract" }
# audiopus_sys = { path = "../audiopus_sys" }
