[package]
name = "bot"
version = "0.1.0"
authors = ["André Vennberg <andre.vennberg@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
apis = { path = "../apis" }
utility = { path = "../utility" }
commands = { path = "../commands" }

log = "0.4"
rand = "0.8"
paste = "1.0"
anyhow = "1.0"
reqwest = "0.11"
once_cell = "1.7"
serde_json = "1"

tokio = { version = "1.2", features = ["full"] }
backoff = { version = "0.3", features = ["tokio"] }
serenity = { version = "0.10", default-features = false, features = [
    "builder",
    "cache",
    "client",
    "gateway",
    "model",
    "http",
    "utils",
    "rustls_backend",
    "framework",
    "standard_framework",
    "unstable_discord_api",
] }
