[package]
name = "commands"
version = "0.1.0"
authors = ["André Vennberg <andre.vennberg@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
apis = { path = "../apis" }
utility = { path = "../utility" }
holo-bot-macros = { path = "../holo-bot-macros/" }

log = "0.4"
rand = "0.8"
paste = "1.0"
regex = "1.4.5"
anyhow = "1.0"
chrono = "0.4"
futures = "0.3.12"
once_cell = "1.7"
serde_json = "1"
tokio-util = "0.6"
chrono-humanize = "0.1"

tokio = { version = "1.2", features = ["full"] }
serenity = { version = "0.10", default-features = false, features = [
    "builder",
    "cache",
    "client",
    "gateway",
    "model",
    "http",
    "utils",
    "rustls_backend",
    "framework",
    "standard_framework",
    "unstable_discord_api",
] }
