[package]
name = "holo-bot-macros"
version = "0.1.0"
authors = ["anden3 <andre.vennberg@gmail.com>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0", features = ["full"] }
quote = "1.0"
serenity = { version = "0.10", features = ["command_attr"] }
proc-macro2 = "1.0"
