[package]
name = "apis"
version = "0.1.0"
authors = ["André Vennberg <andre.vennberg@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
openai = ["openai-api"]

[dev-dependencies]
tracing-test = "0.1"

[dependencies]
utility = { path = "../utility" }
holo-bot-macros = { path = "../holo-bot-macros/" }

lru = "0.7"
deepl = { path = "./deepl" }
bytes = "1"
hyper = "0.14"
regex = "1"
strum = { version = "0.22", features = ["derive"] }
anyhow = "1.0"
chrono = "0.4"
futures = "0.3"
holodex = { git = "https://github.com/anden3/holodex-rs", branch = "next" }
mchad = { path = "./mchad" }
twitter = { path = "./twitter" }
itertools = "0.10"
once_cell = "1.7"
serde_json = "1"
openai-api = { version = "0.1", optional = true }
serde_with = "1.8"
async-trait = "0.1"
pin-project = "1.0"
async-stream = "0.3"
serde-enum-str = "0.2"
chrono-humanize = "0.2"
eventsource-client = "0.7"
serde_path_to_error = "0.1"

tracing = "0.1"
tracing-futures = "0.2"

tokio = { version = "^1", features = ["rt-multi-thread", "sync"] }
serde = { version = "1", features = ["derive"] }
backoff = { version = "0.3", features = ["tokio"] }
reqwest = { version = "0.11", features = ["json", "stream", "blocking"] }
rusqlite = { version = "0.26", features = [
    "bundled",
    "chrono",
    "serde_json",
    "url",
] }
serenity = { git = "https://github.com/serenity-rs/serenity", branch = "next", default-features = false, features = [
    "builder",
    "cache",
    "client",
    "gateway",
    "model",
    "http",
    "utils",
    "rustls_backend",
    "framework",
    "standard_framework",
    "unstable_discord_api",
    "voice",
] }
tokio-util = { version = "0.6.9", features = [
    "time",
], default-features = false }
