[package]
name = "apis"
version = "0.1.0"
authors = ["André Vennberg <andre.vennberg@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
openai = ["openai-api"]

[dev-dependencies]
tracing-test = "0.1"

[dependencies]
utility = { path = "../utility" }
holo-bot-macros = { path = "../holo-bot-macros/" }

lru = "0.7"
ureq = { version = "2" }
deepl = { path = "./deepl" }
# mchad = { path = "./mchad" }
bytes = "1"
hyper = "0.14"
regex = { version = "1", default-features = false, features = ["std"] }
strum = { version = "0.22", features = ["derive"] }
anyhow = "1.0"
chrono = "0.4"
futures = "0.3"
holodex = { git = "https://github.com/anden3/holodex-rs", branch = "next" }
twitter = { path = "./twitter" }
itertools = "0.10"
once_cell = "1.7"
serde_json = "1"
openai-api = { version = "0.1", optional = true }
serde_with = "1.8"
async-trait = "0.1"
async-stream = "0.3"
serde-enum-str = "0.2"
chrono-humanize = "0.2"
eventsource-client = "0.7"
serde_path_to_error = "0.1"

tracing = "0.1"
tracing-futures = "0.2"

tokio = { version = "^1", features = ["rt-multi-thread", "sync"] }
serde = { version = "1", features = ["derive"] }
backoff = { version = "0.3", features = ["tokio"] }
rusqlite = { version = "0.26", features = ["bundled"] }
serenity = { git = "https://github.com/serenity-rs/serenity", branch = "next", default-features = false, features = [
    "model",
] }
tokio-util = { version = "0.6.9", features = [
    "time",
], default-features = false }
