[package]
name = "apis"
version = "0.1.0"
authors = ["André Vennberg <andre.vennberg@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
openai = ["openai-api"]

[dev-dependencies]
tracing-test = "0.1"

[dependencies]
utility = { path = "../utility" }
macros = { path = "../macros/" }

lru = "0.7"
ureq = { version = "2" }
deepl = { path = "./deepl" }
# mchad = { path = "./mchad" }

poise = "0.2.1"
regex = { version = "1", default-features = false, features = ["std"] }
anyhow = "1.0"
chrono = "0.4"
futures = "0.3"
holodex = { git = "https://github.com/anden3/holodex-rs", branch = "next" }
twitter = { path = "./twitter", features = ["entities"] }
once_cell = "1.7"
serde_json = "1"
openai-api = { version = "0.1", optional = true }
serde_with = "1.8"
async-trait = "0.1"
chrono-humanize = "0.2"

tracing = "0.1"

tokio = { version = "^1", features = ["rt-multi-thread", "sync"] }
serde = { version = "1", features = ["derive"] }
rusqlite = { version = "0.26", features = ["bundled"] }
serenity = { version = "0.11.2", default-features = false, features = [
    "model",
    "chrono",
] }
tokio-util = { version = "0.6.9", features = [
    "time",
], default-features = false }
