[package]
name = "bot"
version = "0.1.0"
authors = ["André Vennberg <andre.vennberg@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
apis = { path = "../apis" }
utility = { path = "../utility" }
commands = { path = "../commands" }
macros = { path = "../macros/" }
music-queue = { path = "../music-queue" }

log = "0.4"
lru = "0.7"
ureq = { version = "2" }
regex = { version = "1", default-features = false, features = ["std"] }
anyhow = "1.0"
chrono = "0.4"
futures = "0.3"
songbird = "0.2"
once_cell = "1.7"
serde_json = "1"
chrono-humanize = "0.2"
unicode-truncate = "0.2"

tracing = "0.1"
tracing-futures = "0.2"

tokio = { version = "^1", features = ["rt-multi-thread", "sync"] }
backoff = { version = "0.3", features = ["tokio"] }
serenity = { git = "https://github.com/serenity-rs/serenity", branch = "next", default-features = false, features = [
    "builder",
    "cache",
    "client",
    "collector",
    "gateway",
    "model",
    "http",
    "utils",
    "rustls_backend",
    "framework",
    "standard_framework",
    "unstable_discord_api",
    "voice",
] }
