[package]
name = "bot"
version = "0.1.0"
authors = ["André Vennberg <andre.vennberg@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
apis = { path = "../apis" }
utility = { path = "../utility" }
macros = { path = "../macros/" }
music-queue = { path = "../music-queue" }
holodex = { git = "https://github.com/anden3/holodex-rs", branch = "next" }

log = "0.4"
lru = "0.7"
ureq = { version = "2" }
regex = { version = "1", default-features = false, features = ["std"] }
anyhow = "1.0"
chrono = "0.4"
futures = "0.3"
nanorand = { version = "0.6", default-features = false, features = ["tls"] }
songbird = "0.2"
itertools = "0.10.1"
once_cell = "1.7"
serde_json = "1"
tokio-util = "0.6"
chrono-humanize = "0.2"
unicode-truncate = "0.2"

tracing = "0.1"
tracing-futures = "0.2"

tokio = { version = "^1", features = ["rt-multi-thread", "sync", "signal"] }
backoff = { version = "0.3", features = ["tokio"] }
serenity = { git = "https://github.com/serenity-rs/serenity", branch = "next", default-features = false, features = [
    "builder",
    "cache",
    "client",
    "collector",
    "gateway",
    "model",
    "http",
    "utils",
    "rustls_backend",
    "unstable_discord_api",
    "voice",
] }
poise = { git = "https://github.com/kangalioo/poise", branch = "develop" }
