[package]
name = "bot"
version = "0.1.0"
authors = ["André Vennberg <andre.vennberg@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
apis = { path = "../apis" }
utility = { path = "../utility" }
macros = { path = "../macros/" }
# music-queue = { path = "../music-queue" }
holodex = { git = "https://github.com/anden3/holodex-rs", branch = "next" }

lru = "0.7"
regex = { version = "1", default-features = false, features = ["std"] }
anyhow = "1.0"
chrono = "0.4"
futures = "0.3"
nanorand = { version = "0.6", default-features = false, features = ["tls"] }
# songbird = { git = "https://github.com/GnomedDev/songbird", branch = "personal" }
itertools = "0.10.1"
once_cell = "1.7"
tokio-util = "0.6"
chrono-humanize = "0.2"
unicode-truncate = "0.2"

tracing = "0.1"

tokio = { version = "1", features = ["rt-multi-thread", "sync", "signal"] }
serenity = { version = "0.11", default-features = false, features = [
    "builder",
    "cache",
    "client",
    "collector",
    "gateway",
    "model",
    "http",
    "utils",
    "rustls_backend",
    "unstable_discord_api",
    "voice",
] }
poise = "0.5"
uwuify = { git = "https://github.com/inflation/uwu", branch = "uwu" }
url = "2"
uwuifyy = "0.3.0"
