[package]
name = "commands"
version = "0.1.0"
authors = ["André Vennberg <andre.vennberg@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
criterion = { version = "0.3", features = ["html_reports"] }
tracing-test = "0.1"

[dependencies]
apis = { path = "../apis" }
utility = { path = "../utility" }
holo-bot-macros = { path = "../holo-bot-macros/" }
music-queue = { path = "../music-queue" }
holodex = { git = "https://github.com/anden3/holodex-rs", branch = "next" }

log = "0.4"
num = "0.4"
http = "0.2"
rand = "0.8"
bytes = "1"
regex = "1"
strum = "0.20"
anyhow = "1.0"
chrono = "0.4"
either = "1.6"
linkme = "0.2"
bincode = "1.3"
futures = "0.3"
reqwest = "0.11"
songbird = "0.2"
once_cell = "1.7"
chrono-tz = "0.5"
itertools = "0.10"
ytextract = "0.9"
serde_with = "1.8"
serde_json = "1"
tokio-util = "0.6"
lazy_static = "1.4"
strum_macros = "0.20"
chrono-english = "0.1"
chrono-humanize = "0.2"
serde_path_to_error = "0.1"
fix-hidden-lifetime-bug = "0.2"

tracing = "0.1"
tracing-futures = "0.2"

tokio = { version = "1.2", features = ["full"] }
serde = { version = "1", features = ["derive"] }
rusqlite = { version = "0.25", features = [
    "bundled",
    "chrono",
    "serde_json",
    "url",
] }
serenity = { version = "0.10", default-features = false, features = [
    "builder",
    "cache",
    "client",
    "collector",
    "gateway",
    "model",
    "http",
    "utils",
    "rustls_backend",
    "framework",
    "standard_framework",
    "unstable_discord_api",
    "voice",
] }

[[bench]]
name = "pekofy_benchmark"
harness = false
