[package]
name = "commands"
version = "0.1.0"
authors = ["André Vennberg <andre.vennberg@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
apis = { path = "../apis" }
utility = { path = "../utility" }
holo-bot-macros = { path = "../holo-bot-macros/" }
music-queue = { path = "../music-queue" }
holodex = { git = "https://github.com/anden3/holodex-rs", branch = "next" }

log = "0.4"
num = "0.4"
http = "0.2"
bytes = "1"
regex = { version = "1", default-features = false, features = [
    "std",
    "perf-dfa",
    "perf-inline",
] }
strum = { version = "0.22", features = ["derive"] }
anyhow = "1.0"
chrono = "0.4"
either = "1.6"
linkme = "0.2"
bincode = "1.3"
futures = "0.3"
reqwest = "0.11"
nanorand = { version = "0.6", default-features = false, features = ["tls"] }
songbird = "0.2"
once_cell = "1.7"
chrono-tz = "0.6"
itertools = "0.10"
ytextract = "0.10"
serde_with = "1.8"
serde_json = "1"
tokio-util = "0.6"
lazy_static = "1.4"
chrono-english = "0.1"
chrono-humanize = "0.2"
serde_path_to_error = "0.1"
fix-hidden-lifetime-bug = "0.2"

tracing = "0.1"
tracing-futures = "0.2"

tokio = { version = "1.2", features = ["sync"] }
serde = { version = "1", features = ["derive"] }
rusqlite = { version = "0.26", features = ["bundled"] }
serenity = { git = "https://github.com/serenity-rs/serenity", branch = "next", default-features = false, features = [
    "builder",
    "cache",
    "client",
    "collector",
    "gateway",
    "model",
    "http",
    "utils",
    "rustls_backend",
    "framework",
    "standard_framework",
    "unstable_discord_api",
    "voice",
] }
