[package]
name = "lib"
version = "0.1.0"
authors = ["André Vennberg <andre.vennberg@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bot = { path = "../bot" }
apis = { path = "../apis" }
utility = { path = "../utility" }

log = "0.4"
ctrlc = "3.1"
anyhow = "1.0"
chrono = "0.4"
futures = "0.3.12"
once_cell = "1.7"
chrono-tz = "0.5"
serde_with = "1.8"
signal-hook = "0.3"

tracing = "0.1"
tracing-futures = "0.2"

serde = { version = "1", features = ["derive"] }
tokio = { version = "1.2", features = ["full"] }
openssl = { version = "0.10", features = ["vendored"] }
reqwest = { version = "0.11", features = ["json", "stream", "blocking"] }
signal-hook-tokio = { version = "0.3", features = ["futures-v0_3"] }
