[package]
name = "holo-bot"
version = "1.0.0"
authors = ["anden3 <andre.vennberg@gmail.com>"]
edition = "2021"
description = "Discord bot for Hololive servers."
license = "MIT OR Apache-2.0"
repository = "https://github.com/anden3/holo-bot"
keywords = ["hololive", "discord", "bot"]
categories = ["command-line-utilities"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bot = { path = "../bot" }
apis = { path = "../apis" }
utility = { path = "../utility" }

log = "0.4"
anyhow = "1.0"
chrono = "0.4"
futures = "0.3.12"
once_cell = "1.7"
chrono-tz = "0.6"
serde_with = "1.8"

tracing = "0.1"
tracing-futures = "0.2"

ureq = { version = "2", features = ["json"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "^1", features = ["macros", "rt-multi-thread", "sync"] }
