[package]
name = "music-queue"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
futures = { version = "0.3.17", features = ["std"], default-features = false }
itertools = "0.10.1"
once_cell = "1.8.0"
rand = "0.8.4"
regex = { version = "1.5.4", features = ["std"], default-features = false }
serenity = { version = "0.10.9", features = ["builder", "cache", "http", "model", "utils", "rustls_backend"], default-features = false }
songbird = "0.2.0"
thiserror = "1.0.30"
tokio = { version = "1.13.0", features = ["rt", "time", "sync"], default-features = false }
tokio-util = { version = "0.6.9", default-features = false }
tracing = { version = "0.1.29", features = ["std"], default-features = false }
ytextract = "0.10.0"
