[package]
name = "music-queue"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
futures = { version = "0.3.17", features = ["std"], default-features = false }
itertools = "0.10.1"
nanorand = { version = "0.6", default-features = false, features = ["tls"] }
once_cell = "1.8.0"
regex = { version = "1.5.4", default-features = false, features = ["std"] }
serde = { version = "1.0.130", features = ["derive"] }
serenity = { version = "0.11.2", features = [
    "model",
    "cache",
], default-features = false }
# songbird = { git = "https://github.com/GnomedDev/songbird", branch = "personal" }
thiserror = "1.0.30"
tokio = { version = "1.13.0", features = [
    "rt",
    "time",
    "sync",
], default-features = false }
tokio-util = { version = "0.6.9", default-features = false }
tracing = { version = "0.1.29", features = ["std"], default-features = false }
ytextract = "0.10.0"
