[package]
name = "utility"
version = "0.1.0"
authors = ["André Vennberg <andre.vennberg@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
num = "0.4"
bytes = "1"
regex = "1"
strum = "0.20"
anyhow = "1.0"
chrono = "0.4"
either = "1.6"
bincode = "1.3"
futures = "0.3"
reqwest = "0.11"
itertools = "0.10"
chrono-tz = "0.5"
serde-hex = "0.1"
once_cell = "1.7"
num-traits = "0.2"
serde_json = "1"
serde_with = "1.8"
tokio-util = "0.6"
futures-core = "0.3"
strum_macros = "0.20"
chrono-english = "0.1"
chrono-humanize = "0.2"
unicode-truncate = "0.2"
serde_path_to_error = "0.1"
fix-hidden-lifetime-bug = "0.2"

tracing = "0.1"
tracing-appender = "0.1"
tracing-subscriber = "0.2"
# console-subscriber = { version = "0.1", git = "https://github.com/tokio-rs/console", branch = "main" }

url = { version = "2", features = ["serde"] }
tokio = { version = "^1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
backoff = { version = "0.3", features = ["tokio"] }
failure = { version = "0.1", features = ["derive"] }
rusqlite = { version = "0.25", features = ["chrono", "serde_json", "url"] }
serenity = { version = "0.10", default-features = false, features = [
    "builder",
    "cache",
    "client",
    "collector",
    "gateway",
    "model",
    "http",
    "utils",
    "rustls_backend",
    "framework",
    "standard_framework",
    "unstable_discord_api",
] }
parking_lot = { version = "0.11", features = ["deadlock_detection"] }
