[package]
name = "utility"
version = "0.1.0"
authors = ["André Vennberg <andre.vennberg@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
holodex = { git = "https://github.com/anden3/holodex-rs", branch = "next" }
music-queue = { path = "../music-queue" }

log = "0.4"
lru = "0.7"
num = "0.4"
toml = "0.5"
ureq = { version = "2" }
bytes = "1"
regex = { version = "1", default-features = false, features = ["std"] }
strum = { version = "0.22", features = ["derive"] }
anyhow = "1.0"
chrono = "0.4"
either = "1.6"
miette = { version = "3.1", features = ["fancy"] }
notify = "5.0.0-pre.13"
bincode = "1.3"
futures = { version = "0.3", default-features = false }
unicase = "2"
songbird = "0.2.0"
itertools = "0.10"
chrono-tz = "0.6"
serde-hex = "0.1"
str-utils = "0.1"
once_cell = "1.7"
num-traits = "0.2"
serde_json = "1"
tokio-util = "0.6"
futures-core = "0.3"
chrono-english = "0.1"
chrono-humanize = "0.2"
unicode-truncate = "0.2"
serde_path_to_error = "0.1"
fix-hidden-lifetime-bug = "0.2"

tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "ansi",
    "env-filter",
] }

# console-subscriber = { path = "../../../console/console-subscriber" }

url = { version = "2", features = ["serde"] }
tokio = { version = "^1", features = ["rt-multi-thread", "sync"] }
serde = { version = "1", features = ["derive"] }
backoff = { version = "0.3", features = ["tokio"] }
failure = { version = "0.1", features = ["derive"] }
serde_with = { version = "1.8", features = ["chrono"] }
rusqlite = { version = "0.26", features = ["bundled"] }
serenity = { git = "https://github.com/serenity-rs/serenity", branch = "next", default-features = false, features = [
    "model",
    "unstable_discord_api",
] }
parking_lot = { version = "0.11" }
