[package]
name = "livetl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-sse = "5"
chrono = "0.4"
futures = { version = "0.3", default-features = false, features = ["std"] }
isolang = { version = "2", features = ["serde"] }
miette = "5"
regex = { version = "1", default-features = false, features = ["std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_urlencoded = "0.7"
serde_with = { version = "2", features = ["chrono"] }
thiserror = "1"
tokio = { version = "1", features = ["io-util"] }
tracing = { version = "0.1", features = ["std"], default-features = false }
ureq = { version = "2" }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
tracing-test = "0.2"
