[package]
name = "mchad"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eventsource-client = "0.11"
futures = { version = "0.3", default-features = false }
miette = "5"
pin-project-lite = "0.2"
regex = { version = "1", default-features = false, features = ["std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "2"
thiserror = "1"
tokio = { version = "1", features = [
    "rt",
    "time",
    "sync",
], default-features = false }
tracing = { version = "0.1", features = ["std"], default-features = false }
ureq = { version = "2" }

[dev-dependencies]
tracing-test = "0.2"
