[package]
name = "twitter"
version = "0.1.0"
edition = "2021"

[features]
default = []
translation = []
academic_research_track = ["bounded-integer"]
metrics = []
entities = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
backoff = { version = "0.4", features = ["tokio"] }
bounded-integer = { version = "0.5", optional = true, features = [
    "types",
    "serde",
] }
chrono = { version = "0.4", features = ["serde"] }
futures-lite = { version = "1", default-features = false }
hyper = { version = "0.14", features = ["client", "http1", "stream"] }
isolang = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = { version = "2", features = ["chrono"] }
smartstring = { version = "1", features = ["serde"] }
strum = { version = "0.24", features = ["derive"] }
thiserror = "1"
tokio = { version = "1", features = [
    "rt",
    "time",
    "sync",
], default-features = false }
tracing = { version = "0.1", features = ["std"], default-features = false }
serde_urlencoded = "0.7"
hyper-rustls = "0.23"
